--- a/boxman/package.json
+++ b/boxman/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "electron": "electron .",
+    "dev": "npm-run-all --parallel electron start"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
